<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/marvel_bg_short"
    tools:context=".presentation.fragments.CharacterDetailFragment">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="@dimen/size_250"
        android:layout_height="@dimen/size_250"
        android:elevation="@dimen/size_8"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/custom_progress_bar"
        android:progress="0"
        app:layout_constraintBottom_toBottomOf="@id/image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/image"
        app:layout_constraintVertical_bias="0.07999998" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_250"
        android:contentDescription="@string/content_description_character_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars"/>

<LinearLayout
    android:id="@+id/linear_title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/size_8"
    android:layout_marginHorizontal="@dimen/size_8"
    android:orientation="horizontal"
    android:padding="@dimen/size_8"
    android:background="@color/white_translucent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/image">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size_8"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/comics"
        android:textAppearance="?attr/textAppearanceSubtitle1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/stories"
        android:textAppearance="?attr/textAppearanceSubtitle1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size_8"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/events"
        android:textAppearance="?attr/textAppearanceSubtitle1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/series"
        android:textAppearance="?attr/textAppearanceSubtitle1" />

</LinearLayout>

    <LinearLayout
        android:id="@+id/linear_values"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size_8"
        android:orientation="horizontal"
        android:padding="@dimen/size_8"
        android:background="@color/white_translucent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_title">

        <TextView
            android:id="@+id/tv_comic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/size_8"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            tools:text="@string/comics"
            android:textColor="@color/marvel_red"
            android:textAppearance="?attr/textAppearanceSubtitle1" />

        <TextView
            android:id="@+id/tv_stories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            tools:text="@string/stories"
            android:textColor="@color/marvel_red"
            android:textAppearance="?attr/textAppearanceSubtitle1" />

        <TextView
            android:id="@+id/tv_events"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/size_8"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            tools:text="@string/events"
            android:textColor="@color/marvel_red"
            android:textAppearance="?attr/textAppearanceSubtitle1" />

        <TextView
            android:id="@+id/tv_series"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            tools:text="@string/series"
            android:textColor="@color/marvel_red"
            android:textAppearance="?attr/textAppearanceSubtitle1" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_description"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="@dimen/size_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_values"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="4"
            android:minLines="3"
            android:ellipsize="end"
            android:layout_marginHorizontal="@dimen/size_8"
            android:gravity="fill_horizontal"
            tools:text="Description"
            android:background="@color/white_translucent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
